[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ratking_PH.png" type="Texture" id=1]
[ext_resource path="res://Scripts/state.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Bosses/FiniteStateMachine.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemies/Bosses/RatKing/Idle.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Enemies/Bosses/RatKing.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 26.0
height = 24.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72.5, 42.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 29.5 )

[node name="RatKing" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 5 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 6, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 3, 0 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 4 )

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 2 )

[node name="SpawnRats" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Debug" type="Label" parent="."]
margin_left = -20.0
margin_top = -50.0
margin_right = 20.0
margin_bottom = -36.0
text = "debug"

[node name="RatSpawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0

[node name="HitTimer" type="Timer" parent="."]

[node name="Hitrange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitrange"]
position = Vector2( -20.5, -0.5 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="timeout" from="RatSpawnTimer" to="." method="_on_RatSpawnTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="body_entered" from="Hitrange" to="." method="_on_Hitrange_body_entered"]
[connection signal="body_exited" from="Hitrange" to="." method="_on_Hitrange_body_exited"]
